--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,8 @@
             "name": "Python: Module",
             "type": "python",
             "request": "launch",
-            "module": "series_downloader"
+            "module": "series_downloader",
+            "console": "externalTerminal"
         }
     ]
 }
